# flet-fonts

./: .gitignore  CHANGELOG.md  Justfile  README.MD  README.md  README_en.MD  pyproject.toml
examples/flet_fonts_example/: .gitignore  README.md  pyproject.toml
examples/flet_fonts_example/src/: main.py
src/flet_fonts/: flet_fonts.py  font_data.py  text_span.py
src/flutter/flet_fonts/: pubspec.yaml
src/flutter/flet_fonts/lib/src/: flet_fonts.dart
src/flutter/flet_fonts/lib/src/utils/: text_span.dart
