[project]
name = "flet-fonts"
version = "0.1.7"
description = "flet-fonts uses the Google Fonts library in the background"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arief Minardi", email = "ariefminardi005@gmail.com" }
]
dependencies = [
    "flet>=0.80.0",
    "flet-cli==0.80.0",
    "flet-desktop==0.80.0",
    "flet-web==0.80.0",
]

[project.urls]
Repository = "https://github.com/Noxnusa/flet-fonts"
Issues = "https://github.com/Noxnusa/flet-fonts/issues"

[tool.setuptools.package-data]
"flutter.flet_fonts" = ["**/*"]

[dependency-groups]
dev = [
    "flet[all]==0.80.0",
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.80.0"}

[tool.setuptools]
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
