[project]
name = "flet-fonts-example"
version = "1.0.0"
description = "flet-fonts uses the Google Fonts library in the background"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arief Minardi", email = "ariefminardi005@gmail.com" }
]
dependencies = [
  "flet-fonts",
  "flet>=0.80.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "flet-fonts-example"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by MyCompany"

[tool.flet.app]
path = "src"

[tool.flet.dev_packages]
flet-fonts = "../.." # relative path

[tool.uv]
dev-dependencies = [
    "flet[all]==0.80.0",
]

[tool.uv.sources]
flet-fonts = { path = "../../", editable = true }

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.80.0"}
flet-fonts = {path = "../../", develop = true}
